--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_144","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\LanNN3.local\\workspace\\MyJavaClass","type":"PROJECT","hints":{"PROJECT_NAME":"MyJavaClass"}},"ABSENT"]]
